# ScreenGrabber

./: README.md  release-linux.sh  release.bat
background_listener/: Cargo.toml
background_listener/release/: background_listener.d
background_listener/release/.fingerprint/adler-42fed661232fb787/: lib-adler.json
background_listener/release/.fingerprint/adler32-dd872bf102cb33b9/: lib-adler32  lib-adler32.json
background_listener/release/.fingerprint/anyhow-ba6cf485e3bf542f/: run-build-script-build-script-build  run-build-script-build-script-build.json
background_listener/release/.fingerprint/anyhow-cccd240cc70d9819/: build-script-build-script-build
background_listener/release/.fingerprint/anyhow-f2f9027599d64f8c/: lib-anyhow  lib-anyhow.json
background_listener/release/.fingerprint/arboard-1c95af40bdcf01c3/: lib-arboard  lib-arboard.json
background_listener/release/.fingerprint/arrayref-8f83a12b990c9cc3/: lib-arrayref.json
background_listener/release/.fingerprint/arrayvec-e18c780d3a7589be/: lib-arrayvec
background_listener/release/.fingerprint/ascii-e92a49b978c5088a/: lib-ascii
background_listener/release/.fingerprint/associative-cache-10a8a6c3c61ecbc9/: lib-associative-cache.json
background_listener/release/.fingerprint/autocfg-b78b35bf404a1382/: lib-autocfg  lib-autocfg.json
background_listener/release/.fingerprint/background_listener-f453298deca3bccf/: bin-background_listener  bin-background_listener.json  output-bin-background_listener
background_listener/release/.fingerprint/base64-3ff6173e23478071/: lib-base64  lib-base64.json
background_listener/release/.fingerprint/bitflags-bd7ff5bcf362b03a/: lib-bitflags.json
background_listener/release/.fingerprint/bytemuck-e67ec81b97782a1e/: lib-bytemuck  lib-bytemuck.json
background_listener/src/: main.rs  utils.rs
edit_gui/: Cargo.toml
edit_gui/src/: drawing_tools.rs  edit.rs  main.rs  utils.rs
gui_sg/: Cargo.toml
gui_sg/src/: custom_widgets.rs  main.rs  utils.rs
overlay_process/: Cargo.toml
overlay_process/release/: liboverlay_process.d  overlay_process.d
overlay_process/src/: main.rs  overlay.rs  utils.rs
(+624 files in other folders)
