[package]
name = "gui_sg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.3", features = ["svg"] }
screenshots = "0.6.0"
image = "0.23.14"
native-dialog = "0.6.4"
arboard = { version = "3.2.1"}
thiserror = "1.0.48"
anyhow = "1.0.75"