[package]
name = "overlay_process"
version = "0.1.0"
edition = "2021"

[lib]
name = "overlay_process"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.3", features = ["svg"] }
screenshots = "0.6.0"
image = "0.23.14"
arboard = "3.3.0"
native-dialog = "0.6.4"
anyhow = "1.0.75"
